2007-04-23 14:59  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: Fix a division by zero when the
	  view width is 0

2007-04-20 15:25  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java,
	  src/org/jcae/viewer3d/cad/ViewableCAD.java: Add cheat codes to
	  change polygon offset. Keys are [, ], {, }.

2007-04-19 14:04  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/fe/, src/org/jcae/viewer3d/fe/unv/ :
	  Display parabolic triangles and linear beams

	* src/org/jcae/viewer3d/cad/occ/OCCProvider.java: move TopoDS_Shape
	  loader to occjava

2007-04-18 12:10  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/cad/ViewableCAD.java: allow to pick
	  geometry vertices

2007-02-19 11:35:45  tag V0_14

2007-02-19 11:35:45  Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMViewer.java: Break circular dependency
	  by moving amibe/src/org/jcae/mesh/oemm/OEMMViewer.java into
	  viewer3d/src/org/jcae/viewer3d/OEMMViewer.java; jcae-viewer3d now
	  depends on jcae.jar.

2007-02-13 17:24:00  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/OEMMBehavior.java,
	  src/org/jcae/viewer3d/View.java: Add a dynamic OEMM viewer

2007-02-12 17:16:48  Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/bg/ViewableBG.java: In pickSolid(),
	  picking an already selected cell unselects it.

2007-02-12 10:48:00  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/ViewBehavior.java,
	  src/org/jcae/viewer3d/ViewPyramid.java: Refactor view pyramid
	  computation to use it in both oemm and clipping plane

	* src/org/jcae/viewer3d/FPSBehavior.java,
	  src/org/jcae/viewer3d/test/FPSCounterTest.java:
	  Add classes to measure FPS in a Java3D scene

2007-02-08 15:04:00  Jerome Robert <jeromerobert@users.sourceforge.net>

	* *: Remove deprecated API uses and clean code
